--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,9 +3,15 @@
   "hostRequirements": {
     "cpus": 4
   },
-  "waitFor": "onCreateCommand",
-  "updateContentCommand": "python3 -m pip install -r requirements.txt",
-  "postCreateCommand": "python3 -m venv ~/.venv && echo 'source ~/.venv/bin/activate' >> ~/.bashrc",
+  "overrideCommand": false,
+  "remoteUser": "vscode",
+  "postCreateCommand": "python3 -m venv .venv && .venv/bin/pip install -r requirements.txt",
+  "settings": { 
+    "terminal.integrated.shell.linux": "/bin/bash",
+    "python.pythonPath": ".venv/bin/python",
+    "python.linting.pylintEnabled": true,
+    "python.linting.enabled": true
+  },
   "customizations": {
     "codespaces": {
       "openFiles": []
