--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-matplotlib
-numpy
-pandas
-geopandas
-statsmodels
-scikit-learn
-ipywidgets
-statsmodels
-scipy
+matplotlib==3.7.2
+numpy==1.25.1
+pandas==2.0.3
+geopandas==0.13.2
+statsmodels==0.14.0
+scikit-learn==1.3.0
+ipywidgets==8.0.7
+black==23.7.0
+black-nb==0.7
 
